firewall.conf
# Generated by xtables-save v1.8.2 on Mon Nov  4 16:32:23 2019
*filter
:INPUT DROP [499:114962]
:FORWARD DROP [0:0]
:OUTPUT DROP [1238:83160]
-A INPUT -s 192.168.20.2/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.20.3/32 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -p tcp -m tcp --dport 8080 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 192.168.20.2/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -d 192.168.20.3/32 -p tcp -m tcp --sport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.20.3/32 -p tcp -m tcp --sport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon Nov  4 16:32:23 2019
